--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,9 @@
 == README
 
 This is a project for a tower test.
+
+[online test](http://114.55.0.101/)
+
+account: member_a@test.com
+
+password: 123456
